--- a/custom_components/eskom_loadshedding/manifest.json
+++ b/custom_components/eskom_loadshedding/manifest.json
@@ -5,11 +5,12 @@
   "issue_tracker": "https://github.com/swartjean/ha-eskom-loadshedding/issues",
   "dependencies": [],
   "config_flow": true,
-  "version": "1.0.4",
+  "version": "1.0.5",
   "codeowners": [
     "@swartjean"
   ],
   "requirements": [
     "aiohttp-retry==1.0"
-  ]
+  ],
+  "iot_class": "cloud_polling"
 }
