--- a/packages/goodwe.yaml
+++ b/packages/goodwe.yaml
@@ -48,14 +48,14 @@ sensor:
     source: sensor.energy_buy
     name: energy_buy_sum
     unit_prefix: k
-    round: 1
+    round: 2
     method: left
   # Sensor for Riemann sum of energy sold (W -> Wh)
   - platform: integration
     source: sensor.energy_sell
     name: energy_sell_sum
     unit_prefix: k
-    round: 1
+    round: 2
     method: left
 
   # Sensor for Riemann sum of solar energy generate (W -> Wh)
@@ -63,7 +63,7 @@ sensor:
     source: sensor.goodwe_ppv
     name: energy_solar_generate
     unit_prefix: k
-    round: 1
+    round: 2
     method: left
 
 
@@ -215,7 +215,7 @@ automation:
                     text: >
                       *Eskom:* {{ states('sensor.energy_buy_daily') }} kWh / R{{ states('sensor.energy_buy_daily_cost') }}
                       {{- '\n' -}}*Solar:* {{ states('sensor.solar_generate_daily') }} kWh / R{{ states('sensor.energy_generate_daily_saving') }}
-                      {{- '\n' -}}*Total:* {{ states('sensor.energy_buy_daily')|float + states('sensor.solar_generate_daily')|float }} kWh / R{{ states('sensor.energy_buy_daily_cost')|float + states('sensor.energy_generate_daily_saving')|float }}
+                      {{- '\n' -}}*Total:* {{ states('sensor.energy_buy_daily')|float + states('sensor.solar_generate_daily')|float }} kWh / R{{ states('sensor.energy_buy_daily_cost')|float + states('sensor.energy_generate_daily_saving')|float|round(2) }}
               - type: header
                 text:
                   type: plain_text
@@ -227,7 +227,7 @@ automation:
                     text: >
                       *Eskom:* {{ states('sensor.energy_buy_monthly') }} kWh / R{{ states('sensor.energy_buy_monthly_cost') }}
                       {{- '\n' -}}*Solar:* {{ states('sensor.solar_generate_monthly') }} kWh / R{{ states('sensor.energy_generate_monthly_saving') }}
-                      {{- '\n' -}}*Total:* {{ states('sensor.energy_buy_monthly')|float + states('sensor.solar_generate_monthly')|float | int }} kWh / R{{ states('sensor.energy_buy_monthly_cost')|float + states('sensor.energy_generate_monthly_saving')|float }}
+                      {{- '\n' -}}*Total:* {{ states('sensor.energy_buy_monthly')|float + states('sensor.solar_generate_monthly')|float | int }} kWh / R{{ states('sensor.energy_buy_monthly_cost')|float + states('sensor.energy_generate_monthly_saving')|float|round(2) }}
               - type: section
                 text:
                   type: mrkdwn
@@ -240,7 +240,7 @@ automation:
                     {{- '\n' -}}Today's solar generation: {{ states('sensor.solar_generate_daily') }} kWh / R{{ states('sensor.energy_generate_daily_saving') }}
                     {{- '\n' -}}This month's current usage: {{ states('sensor.energy_buy_monthly') }} kWh / R{{ states('sensor.energy_buy_monthly_cost') }}
                     {{- '\n' -}}This month's solar generation: {{ states('sensor.solar_generate_monthly') }} kWh / R{{ states('sensor.energy_generate_monthly_saving') }}
-                    {{- '\n' -}}Total monthly usage: {{ states('sensor.energy_buy_monthly')|float + states('sensor.solar_generate_monthly')|float | int }} kWh / R{{ states('sensor.energy_buy_monthly_cost')|float + states('sensor.energy_generate_monthly_saving')|float }}
+                    {{- '\n' -}}Total monthly usage: {{ states('sensor.energy_buy_monthly')|float + states('sensor.solar_generate_monthly')|float | int }} kWh / R{{ states('sensor.energy_buy_monthly_cost')|float + states('sensor.energy_generate_monthly_saving')|float|round(2) }}
 
   ## notification if SoH drop below 50%
   - alias: Notify SoH below 50
